[package]
name = "similarity-least-squares"
version = "0.3.0"
edition = "2021"
authors = ["Rostyslav Bohomaz <rostyslav.db@gmail.com>"]
description = "Least-squares estimation of transformation parameters between two point patterns"
keywords = ["linear-algebra", "least-squares", "similarity", "transformation"]
repository = "https://github.com/rostyq/similarity-least-squares-rs"
license = "MIT"

[[bench]]
name = "main"
harness = false

[features]
default = ["std"]
std = ["nalgebra/std"]

[dependencies]
nalgebra = { version = "0.33", default-features = false }

[dev-dependencies]
approx = { version = "0.5", default-features = false }
criterion = "0.6"
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
